# RayCaster

./: .gitignore  CMakeLists.txt  README.md  main.cpp  walls.txt
RayCasting/: Player.cpp  Player.h  Ray.cpp  Ray.h  Texture.cpp  Texture.h  Wall.cpp  Wall.h  World.cpp  World.h
Utils/: Angle.cpp  Angle.h  Position.cpp  Position.h  Timer.cpp  Timer.h  Utilities.h
Window/: Drawer.cpp  Drawer.h  Window.cpp  Window.h
